--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ html, body, #root {
     margin: 0 0 0 0 !important;
 }
 
+/* Stretches content inside the inheriting container marked as 'StretchContainer' */
 .StretchContent {
     display: flex;
     flex-flow: column;
